--- a/views/pages/login.jade
+++ b/views/pages/login.jade
@@ -8,7 +8,7 @@ block content
 	section.page__title
 		div.page__title__container
 			div.page__title__text
-				a(href='#!') Login
+				p Login
 			div.page__title__buttons
 				div.button__container
 					a(href='/account/signup').button Register ?
