--- a/views/pages/register.jade
+++ b/views/pages/register.jade
@@ -8,7 +8,7 @@ block content
 	section.page__title
 		div.page__title__container
 			div.page__title__text
-				a(href='#!') Register
+				p Register
 			div.page__title__buttons
 				div.button__container
 					a(href='/account/login').button Login ?
