Changement des guideslines

--- a/views/pages/account.jade
+++ b/views/pages/account.jade
@@ -2,13 +2,9 @@ extend ../templates/common/layout
 block vars
 	- var title = 'Index'
 	- var navBarActiveId = 0
+	- var pageName = 'Accounts'
 
 block content
-	section.page__title
-		div.page__title__container
-			div.page__title__text
-				p Accounts
-
 	div.row
 		div(class='12u')
 			section.card.card--raw
