--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -2,6 +2,7 @@ extend ../templates/common/layout
 block vars
 	- var title = 'Index'
 	- var navBarActiveId = 0
+	- var pageName = 'Index'
 
 block content
 	div.row
