--- a/views/pages/notes.jade
+++ b/views/pages/notes.jade
@@ -3,13 +3,9 @@ block vars
 	- var title = 'Index'
 	- var navBarActiveId = 0
 	- var pageClass = 'notes'
+	- var  pageName = 'My notes'
 
 block content
-	section.page__title
-		div.page__title__container
-			div.page__title__text
-				p My Notes
-
 	div(data-remodal-id="modal").remodal.notes__modal__delete
 		div.remodal__header
 			div.remodal__header__l
