--- a/views/pages/register.jade
+++ b/views/pages/register.jade
@@ -5,11 +5,11 @@ block vars
 	- var pageClass = 'register'
 
 block content
-	section.page__title
-		div.page__title__container
-			div.page__title__text
+	section.page__head
+		div.page__head__container
+			div.page__head__text
 				p Register
-			div.page__title__buttons
+			div.page__head__buttons
 				div.button__container
 					a(href='/account/login').button Login ?
 
