--- a/views/templates/components/footer.jade
+++ b/views/templates/components/footer.jade
@@ -3,7 +3,7 @@ div.footer
 		div.footer__container
 			div.row
 				div(class="6u 12u(small)")
-					p.footer__references Lessons&copy;
+					p.footer__references kNotes&copy;
 
 				div(class="6u 12u(small)")
 					p.footer__authors.
