--- a/views/templates/components/head.jade
+++ b/views/templates/components/head.jade
@@ -40,4 +40,4 @@ head
 
 	script(src="/js/top.js")
 	
-	title #{title} &middot; Département Informatique &middot; IUT &middot; Université du Havre
+	title #{title} &middot; kNotes
