--- a/views/templates/components/navbar.jade
+++ b/views/templates/components/navbar.jade
@@ -8,7 +8,7 @@ nav#navbar.navbar
 	div.container
 		div.navbar__container
 			div.navbar__title
-				a(href='/') Lessons
+				a(href='/') kNotes
 
 			div#navbar__entries.navbar__entries
 				if isAuthenticated
