--- a/views/pages/login.jade
+++ b/views/pages/login.jade
@@ -3,18 +3,14 @@ block vars
 	- var title = 'Login'
 	- var navBarActiveId = 0
 	- var pageClass = 'login'
+	- var pageName = 'Login'
+
+block pageButtons
+	a(href='/account/signup').button Register ?
+	a(href='/auth/facebook').button Login with facebook
+	a(href='/auth/google').button Login with google
 
 block content
-	section.page__title
-		div.page__title__container
-			div.page__title__text
-				p Login
-			div.page__title__buttons
-				div.button__container
-					a(href='/account/signup').button Register ?
-					a(href='/auth/facebook').button Login with facebook
-					a(href='/auth/google').button Login with google
-
 	div.row
 		div(class="6u -3u")
 			section.card.login
