--- a/views/pages/note.jade
+++ b/views/pages/note.jade
@@ -3,17 +3,13 @@ block vars
 	- var title = 'Index'
 	- var navBarActiveId = 0
 	- var pageClass = 'note'
+	- var	pageName = note.name
+
+block pageButtons
+	a(href='/notes').button Return to note list
+	a(href='/notes/#{note._id}/section/create').button Add section
 
 block content
-	section.page__title
-		div.page__title__container
-			div.page__title__text
-				p!= note.name
-			div.page__title__buttons
-				div.button__container
-					a(href='/notes').button Return to note list
-					a(href='/notes/#{note._id}/section/create').button Add section
-
 	div.row
 		div(class='6u -3u 10u(large) -2u(large) 12u(medium)')
 			section#select.card.card--raw
@@ -39,7 +35,7 @@ block content
 			section.note
 				if note.noteSections.length > 0
 					each noteSection, index in note.noteSections
-						div(id='#{noteSection._id}').note__section
+						div(id='#{noteSection._id}').card.note__section
 							div.card__container
 								div.card__title
 									p= noteSection.name
